<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".fragments.CategoriasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cadastro_categoria" />

        <Button
            android:id="@+id/btnGravarCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_gravar" />

        <Button
            android:id="@+id/btnExcluirCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_excluir" />

    </LinearLayout>

    <TextView
        android:id="@+id/textCodigo2Categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/codigo" />

    <EditText
        android:id="@+id/editCodigoCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="none"
        android:text="" />

    <TextView
        android:id="@+id/textNome2Categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/editNomeCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />
    <ListView
        android:id="@+id/listaCategorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/holo_orange_light" />
</LinearLayout>