<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".fragments.ProdutosFragment">

    <LinearLayout
        android:id="@+id/produtoFormButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnGravarEditarProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_gravar" />

        <Button
            android:id="@+id/btnExcluirProduto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_excluir" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/produtoFormLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textCodigoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/codigo" />

        <EditText
            android:id="@+id/editCodigoProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:text="" />

        <TextView
            android:id="@+id/textQuantidade2Produto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria" />

        <Spinner
            android:id="@+id/spnCategProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome" />

        <EditText
            android:id="@+id/editNomeProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textPrecoVendaProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/preco_venda" />

        <EditText
            android:id="@+id/editPrecoVendaProduto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

    </LinearLayout>

    <ListView
        android:id="@+id/listaProdutos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:listSelector="@android:color/holo_orange_light"
        android:choiceMode="singleChoice" />

</LinearLayout>